--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,7 @@ span{
 body{
   background-image: linear-gradient(rgb(0,20,0),rgb(0,21,0),rgb(0, 22, 0),rgb(0, 23, 0),rgb(0, 22, 0),rgb(0, 21, 0),rgb(0, 20, 0));
 }
+
+a{
+  color:  rgb(255, 0, 0);
+}
