--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 .div1 {
   display: flex;
-  justify-content: center;
   text-align: center;
-  position: absolute;
   height: 100%;
   width: 99.4%;
 }
 
 #div2{
+  position:absolute;
   box-sizing: border-box;
   border: 12px solid transparent;
   width: 30%;
@@ -15,7 +14,8 @@
   border-image-slice: 45%;
   border-image-repeat: round;
   background-color: #DEDCCF;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  height:100%;
 }
 
 span{
@@ -44,4 +44,9 @@ a{
   border-image-source: url(border.png);
   border-image-slice: 4;
   border-image-repeat: round;
+}
+
+#bpve{
+  font-family:monospace;
+  font-size: 300%;
 }
