--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,12 @@ a{
   font-family:monospace;
   font-size: 300%;
 }
+
+.links-section{
+  width: auto;
+  height: auto;
+}
+
+#mini-texto{
+  position: relative;font-size: 0.5em; color: white;z-index: 10;
+}
