--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@media screen and (min-width: 1360px){
+
 .div1 {
   display: flex;
   position:absolute;
@@ -72,3 +74,84 @@ a{
   position:absolute; max-width: 100%; height: auto; width: 60%;bottom:5%;right:19%;margin:auto
 }
 
+}
+
+@media screen and (max-width: 1359px){
+.div1 {
+  display: flex;
+  position:absolute;
+  text-align: center;
+  height: 100%;
+  width: 90%;
+}
+
+#div2{
+  position:absolute;
+  box-sizing: border-box;
+  border: 12px solid transparent;
+  width: 30%;
+  border-image-source: url(border.png);
+  border-image-slice: 45%;
+  border-image-repeat: round;
+  background-color: #DEDCCF;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  height:100%;
+}
+
+span{
+  color: rgb(255, 0, 0);
+}
+
+#logo{
+  display: flex;
+  justify-content: center;
+  height: auto;
+}
+
+body{
+  background-image: radial-gradient(rgb(0,20,0),rgb(0,21,0),rgb(0, 22, 0),rgb(0, 23, 0),rgb(0, 22, 0),rgb(0, 21, 0),rgb(0, 20, 0));
+}
+
+a{
+  color:  rgb(255, 0, 0);
+}
+
+.link{
+  box-sizing: border-box;
+  border: 3px solid transparent;
+  background-image: radial-gradient(rgb(0,20,0),rgb(0,21,0),rgb(0, 22, 0),rgb(0, 23, 0),rgb(0, 22, 0),rgb(0, 21, 0),rgb(0, 20, 0));
+  padding:1.1em;
+  border-image-source: url(border.png);
+  border-image-slice: 4;
+  border-image-repeat: round;
+  font-size: 80%;
+}
+
+#bpve{
+  font-family:monospace;
+  font-size: 250%;
+}
+
+.links-section{
+  width: auto;
+  height: auto;
+}
+
+#mini-texto{
+  position: relative;font-size: 0.5em; color: white;z-index: 10;
+}
+.links-section:hover{
+  font-size: 110%;
+}
+
+#discord-logo{
+  position:absolute; max-width: 100%; height: auto; width: 45%;bottom:10%;right:27.5%;margin:auto
+}
+
+#discord-logo:hover{
+  position:absolute; max-width: 100%; height: auto; width: 50%;bottom:5%;right:24%;margin:auto
+}
+
+}
+
+}
